Revert "FIxed animation overflow issue"
This reverts commit 1c01b96f2378376f7868329678cec97591c674c4.
Removing this line doesn't cause the page to overflow horizontally.
Perhaps this commit fixed it:
https://github.com/ChrisCrossCrash/chriskumm.com-nextjs/commit/c1f710849af86d072272084566db71ec5cbbc193

--- a/components/PortfolioSite/PortfolioSite.module.scss
+++ b/components/PortfolioSite/PortfolioSite.module.scss
@@ -3,7 +3,6 @@
   flex-direction: column;
   align-items: center;
   margin-bottom: 8rem;
-  overflow-x: hidden;
 
   // --screen-md is 768px
   @media (min-width: 768px) {
